--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,59 +7,162 @@
     <script src="https://kit.fontawesome.com/3c6bed4845.js" crossorigin="anonymous"></script>
     <title>Centro de Mascotas- Patitas</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <header>
-        <img src="../assets/img/Logo.png.png" alt="Logo de Centro de Mascotas -Patitas">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Conocenos</a></li>
-                <li><a href="./adopciones.html">Adopta</a></li>
-                <li><a href="./donaciones.html">Apadrina</a></li>
-                <li><a href="./contacto.html">Contactate</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-md navbar-light bg-gradient">
+            <div class="container-fluid">
+                <img src="../assets/img/Logo.png.png" alt="" width="30" height="24">
+                <a class="navbar-brand" href="">Centro de Mascotas Patitas</a>
 
-
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Donaciones.html">Donaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Adopciones.html">Adopciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section>
-            <h1> CONTACTATE CON NOSOTROS</h1>
-            <img src="../assets/img/contacto.png.jpg" alt="imagen que representa 4 perros mirando hacia la camara">
-            <form action=""></form>
-            <div>
-                <label for="name">Nombre</label>
-                <input type="text" placeholder="Ingrese su Nombre" id="Name" name="Nombre" required>
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="Email" name="Email" placeholder="Email@......com" required>
-
+            <h1 class="text-center bg-warning"> CONTACTATE CON NOSOTROS</h1>
+            <div class="container">
+                <div class="col">
+                    <div class="row">
+                        <img class="img rounded-pill "
+                            src="../assets/img/contacto.png.jpg"="imagen que representa 4 perros mirando hacia la camara">
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <label for="Localidad">Localidad</label>
-                <input type="text" id="Localidad" name="Barrio" placeholder="Temperley" required>
-            </div>
-            <div>
-                <label for="Mascotas">Mascotas</label>
-                <input type="number" id="Mascotas" name="Cantidad de mascotas" placeholder="2 perros" required>
-            </div>
-            <div>
-                <textarea name="Comentarios" id="Comentarios" cols="30" rows="10"
-                    placeholder="Ingrese su consulta"></textarea>
-            </div>
-            <div>
-                <input type="reset" value="Eliminar">
-                <input type="submit" value="Enviar">
+            <div class="container">]
+                <div class=" text-center mt-5 ">
+
+                    <h1 class="formulario bg-warning">Formulario de contacto</h1>
+
+
+                </div>
+
+
+                <div class="row ">
+                    <div class="col-lg-7 mx-auto">
+                        <div class="card mt-2 mx-auto p-4 bg-light">
+                            <div class="card-body bg-light">
+
+                                <div class="container">
+                                    <form id="contact-form" role="form">
+
+
+
+                                        <div class="controls">
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label for="form_name">Nombre</label>
+                                                        <input id="form_name" type="text" name="name"
+                                                            class="form-control" placeholder="Ingresa tu nombre"
+                                                            required="required" data-error="Firstname is required.">
+
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label for="form_lastname">Apellido</label>
+                                                        <input id="form_lastname" type="text" name="surname"
+                                                            class="form-control" placeholder="Ingresa tu apellido"
+                                                            required="required" data-error="Lastname is required.">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label for="form_email">Email</label>
+                                                        <input id="form_email" type="email" name="email"
+                                                            class="form-control" placeholder="Ingresa tu Email"
+                                                            required="required" data-error="Valid email is required.">
+
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label for="form_need">Motivo de consulta</label>
+                                                        <select id="form_need" name="need" class="form-control"
+                                                            required="required" data-error="Especifica tu consulta">
+                                                            <option value="" selected disabled>--Selecciona--
+                                                            </option>
+                                                            <option>Quiero visitar el refugio</option>
+                                                            <option>Quiero donar</option>
+                                                            <option>Quiero adoptar</option>
+                                                            <option>Otro</option>
+                                                        </select>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <div class="form-group">
+                                                        <label for="form_message">Mensaje</label>
+                                                        <textarea id="form_message" name="message" class="form-control"
+                                                            placeholder="Escribinos tu duda" rows="4"
+                                                            required="required"
+                                                            data-error="Please, leave us a message."></textarea>
+                                                    </div>
+
+                                                </div>
+
+
+                                                <div class="col-md-12">
+
+                                                    <input type="submit" class="btn btn-danger btn-send  pt-2 btn-block
+                                    " value="Enviar mensaje">
+
+                                                </div>
+
+                                            </div>
+
+
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
+
+
+                </div>
             </div>
 
 
         </section>
-        
+
     </main>
     <footer>
         <section>
@@ -93,6 +196,7 @@
         </section>
         <p>Todos los derechos Reservados</p>
     </footer>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
