cambios en mi proyecto

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -48,7 +48,17 @@
     </header>
     <main>
         <section>
-            <h1 class="text-center bg-warning m-5 m-lg-5"> CONTACTATE CON NOSOTROS</h1>
+            <div class="header-row row">
+                <div class="banner-image col-md-4">
+                <img src="../assets/img/carrosuel 3.jpg" class="img-fluid" alt="">
+                </div>
+              
+                <div class="banner-arrow col-md-5">
+                  <div class="banner-arrow-text">
+                    <h1 class="text-dark regular">CONTACTATE</h1>
+                  </div>
+                </div>
+              </div>
             <div class="container">
                 <div class="col">
                     <div class="row">
