--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -47,10 +47,20 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center m-5 bg-warning mt-15 m-md-5 border-5">CONOCENOS:</h1>
-        <div class="containerCard m-5">
+        <div class="header-row row">
+            <div class="banner-image col-md-4">
+                <img src="../assets/img/carroussel2.jpg" class="img-fluid" alt="">
+            </div>
+
+            <div class="banner-arrow col-md-5">
+                <div class="banner-arrow-text">
+                    <h1 class="text-dark regular">CONOCENOS</h1>
+                </div>
+            </div>
+        </div>
+        <div class="containerCard m-4">
             <div class="row">
-                <div class="col-md-4 Services-tab  item">
+                <div class="col-md-4 Services-tab item">
                     <div class="folded-corner service_tab_1">
                         <div class="text">
                             <i class="fa-solid fa-shield-dog fa-2xl"></i>
@@ -94,7 +104,7 @@
             </div>
         </div>
         <section>
-            <h2 class="Opiniones bg-warning text-center text-black-50 m-5"> Opiniones de quienes nos conocen ya:
+            <h2 class="Opiniones bg-light text-center text-black-50 m-5"> Opiniones de quienes nos conocen ya:
             </h2>
             <div class='container mt-5 col-md-10 col-11 bg-light'>
                 <div class="header text-muted text-black-50"></div>
@@ -102,20 +112,28 @@
                     <div class="card col-md-3 col-11">
                         <div class="card-content bg-light border-danger">
                             <div class="card-body p-0">
-                                <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones.jpg" class="card-img-top rounded-circle "> </div>
+                                <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones.jpg"
+                                        class="card-img-top rounded-circle "> </div>
                                 <div class="card-subtitle">
-                                    <p> <small class="text-muted"> </i>Hermosa experiencia, fuimos a pasar un domingo en familia al Refugio rodeados de amor de 4 patas! <i class="fas fa-quote-left fa-flip-horizontal"></i> </small> </p>
+                                    <p> <small class="text-muted"> </i>Hermosa experiencia, fuimos a pasar un domingo en
+                                            familia al Refugio rodeados de amor de 4 patas! <i
+                                                class="fas fa-quote-left fa-flip-horizontal"></i> </small> </p>
                                 </div>
-                                <div class="card-body"> </i> <small class="intro text-muted">Familia Rodriguez, Bs. As.</small> </div>
+                                <div class="card-body"> </i> <small class="intro text-muted">Familia Rodriguez, Bs.
+                                        As.</small> </div>
                             </div>
                         </div>
                     </div>
                     <div class="card col-md-3 col-11 second">
                         <div class="card-content bg-light">
                             <div class="card-body p-0">
-                                <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones 2.jpg"class="card-img-top rounded-circle " > </div>
+                                <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones 2.jpg"
+                                        class="card-img-top rounded-circle "> </div>
                                 <div class="card-subtitle">
-                                    <p> <small class="text-muted"> <i class="fas fa-quote-left "></i> Adoptamos a nuestro Bruno, mas que agaradecidos al amor que le brindaron despues de tanto sufrimiento! <i class="fas fa-quote-left fa-flip-horizontal"></i> </small> </p>
+                                    <p> <small class="text-muted"> <i class="fas fa-quote-left "></i> Adoptamos a
+                                            nuestro Bruno, mas que agaradecidos al amor que le brindaron despues de
+                                            tanto sufrimiento! <i class="fas fa-quote-left fa-flip-horizontal"></i>
+                                        </small> </p>
                                 </div>
                                 <div class="card-body"> </i><small class="intro text-muted">Maria. Bs.As</small> </div>
                             </div>
@@ -124,11 +142,15 @@
                     <div class="card col-md-3 col-11">
                         <div class="card-content bg-light">
                             <div class="card-body p-0">
-                                <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones 3.jpg" class="card-img-top rounded-circle "> </div>
+                                <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones 3.jpg"
+                                        class="card-img-top rounded-circle "> </div>
                                 <div class="card-subtitle">
-                                    <p> <small class="text-muted"> <i class="fas fa-quote-left"></i> Gracias por cuidar y ayudar a Samy. Y por darme la confianza para que hoy sea parte de mi familia! <i class="fas fa-quote-left fa-flip-horizontal"></i> </small> </p>
+                                    <p> <small class="text-muted"> <i class="fas fa-quote-left"></i> Gracias por cuidar
+                                            y ayudar a Samy. Y por darme la confianza para que hoy sea parte de mi
+                                            familia! <i class="fas fa-quote-left fa-flip-horizontal"></i> </small> </p>
                                 </div>
-                                <div class="card-body"> </i><small class="intro text-muted">Jonhatan, Bs.As.</small> </div>
+                                <div class="card-body"> </i><small class="intro text-muted">Jonhatan, Bs.As.</small>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -144,36 +166,40 @@
         </section>
     </main>
     <footer class="footer">
-        <section>
-            <h4>Encontranos en nuestras redes sociales</h4>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank">
+        <div class="container-fluid  mt-100">
+          <div class="row">
+            <section>
+              <h4 class="h4 bg-warning">Encontranos en nuestras redes sociales</h4>
+              <a href="https://www.whatsapp.com/?lang=es" target="_blank">
                 <i class="fa-brands fa-whatsapp"></i>
-            </a>
-            <a href="https://www.instagram.com/" target="_blank">
+              </a>
+              <a href="https://www.instagram.com/" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="https://www.youtube.com/?app" target="_blank">
+              </a>
+              <a href="https://www.youtube.com/?app" target="_blank">
                 <i class="fa-brands fa-youtube"></i>
-            </a>
-        </section>
-        <section>
-            <h5>Estamos en:
-                <p>Av. Eva Peron 999</p>
-                <p>Barrio Temperley</p>
-                <p>Buenos Aires. Argentina.</p>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.6295682036293!2d-58.37125832517085!3d-34.76492307289699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d3b3093689b%3A0x34344e5c2bfd1887!2sAv.%20Eva%20Per%C3%B3n%2C%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707001208368!5m2!1ses-419!2sar"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </a>
+            </section>
+          </div>
+          <section>
+            <h5> Estamos en:
+              <p>Av. Eva Peron 999</p>
+              <p>Barrio de Temperley</p>
+              <p>Buenos Aires. Argentina.</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.6295682036293!2d-58.37125832517085!3d-34.76492307289699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d3b3093689b%3A0x34344e5c2bfd1887!2sAv.%20Eva%20Per%C3%B3n%2C%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707001208368!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </h5>
-        </section>
-        <section>
+          </section>
+          <section>
             <h4>CONTACTO</h4>
             <p>15-123-456</p>
             <p>centrodemascotas@patitas.com.ar</p>
-        </section>
-        <p>Todos los derechos Reservados</p>
-    </footer>
+          </section>
+          <p>Todos los derechos Reservados</p>
+        </div>
+      </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
