--- a/index.html
+++ b/index.html
@@ -1,167 +1,188 @@
-<!DOCTYPE html>
-<html lang="en">
+<DOCTYPE html>
+  <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/3c6bed4845.js" crossorigin="anonymous"></script>
-  <title>Centro de Mascotas- Patitas</title>
-  <meta name="descripcion" content="Refugio para animales abandonados">
-  <title> Centro de Mascotas Patitas refugio de animales en situacion de abandono</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/estilos.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3c6bed4845.js" crossorigin="anonymous"></script>
+    <title>Centro de Mascotas- Patitas</title>
+    <meta name="descripcion" content="Refugio para animales abandonados">
+    <title> Centro de Mascotas Patitas refugio de animales en situacion de abandono</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/estilos.css">
+  </head>
 
-<body>
+  <body>
 
-  <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-gradient">
-      <div class="container-fluid">
-        <img src="./assets/img/Logo.png.png" alt="" width="30" height="24">
-        <a class="navbar-brand" href="">Centro de Mascotas Patitas</a>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light bg-gradient">
+        <div class="container-fluid">
+          <img src="./assets/img/Logo.png.png" alt="" width="30" height="24">
+          <a class="navbar-brand" href="">Centro de Mascotas Patitas</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/Nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/Donaciones.html">Donaciones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/Adopciones.html">Adopciones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="">
-      <h1 class="text-center bg-warning m-5 mt-15 m-md-5 border-5">¡BIENVENIDO A CENTRO PATITAS!</h1>
-      <div class="row">
-        <div class="text-center m-2 bg-warning">Somos una ONG enfocada en mejorar, ayudar y colaborar con cientos de
-          Animales que nos necesitan. Nuestro mayor objetivo es concientizar sobre la tenencia responsables de nuestros
-          compañeros.Merecen lo mejor de nosotros, Involúcrate.
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Donaciones.html">Donaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Adopciones.html">Adopciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
+              </li>
+            </ul>
           </div>
-      </div>
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators mt-5">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./assets/img/carroussel1.jpg" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item">
-          <img src="./assets/img/carrosouel 2.jpg" class="d-block w-100" alt="">
+      </nav>
+      <section class="carrusel">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/img/carroussel1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h1>BIENVENIDO A CENTRO PATITAS</h1>
+                <p>Somos una ONG enfocada en mejorar, ayudar y colaborar con cientos de
+                  Animales que nos necesitan</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/img/carrosouel 2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h1>ADOPCIONES</h1>
+                <p>Nuestro mayor objetivo es concientizar sobre la tenencia responsables de nuestros
+                  compañeros.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/img/carrosuel 3.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h1> CONCIENCIA</h1>
+                <p>Merecen lo mejor de nosotros. Involucrate.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="carousel-item">
-          <img src="./assets/img/carrosuel 3.jpg" class="d-block w-100" alt="...">
+      </section>
+    </header>
+    <main>
+      <div class="container">
+        <h1 class="text-center" style="margin-top: 50px;">SOBRE NOSOTROS</h1>
+        <div class="row" style="margin-top: 50px;">
+          <div class="col-md-6 py-3 py-md-0">
+            <div class="card">
+              <img src="./assets/img/sobre nosotros.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-md-6 py-3 py-md-0">
+            <p>Somos un equipo de personas impulsadas por la empatía hacia los animales, reconociéndolos como nuestros
+              semejantes debido a su capacidad para experimentar placer, alegría, dolor y sufrimiento. Vos tambien podes
+              ser parte de esto.</p>
+              <button type="button" class="btn btn-secondary">Conocer mas</button>
+            <a href="./pages/nosotros.html"></a>
+          </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-  </header>
-  <main>
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col">
-          <div class="card border-0 text-center">
-            <img src="./assets/img/perronoti.jpeg" class="card-img-top rounded-circle " alt="...">
-            <div class="card-body">
-              <h5 class="card-title">NUEVAS ADOPCIONES</h5>
-              <p class="card-text"> En la ultima campaña de adopciones, ¡10 amigos de 4 patas consiguieron una familia!
-              </p>
-              <a href="./pages/Adopciones.html" class="btn btn-danger">Adopta</a>
+      <div class="container">
+        <div class="row" style="margin-top: 100px;">
+          <div class="col-md-4 py-3 py-md-0">
+            <div class="card" class="tpc">
+              <img src="./assets/img/noticiacard.jpg" alt="" class="card image-top">
+              <div class="card-img-overlay">
+                <h4 class="cardtext">Veni a conocernos</h4>
+                <p class="cardtext">Proximas visitas al refugio</p>
+                <button type="button" class="btn btn-outline-light">Leer mas</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 py-3 py-md-0">
+            <div class="card" class="tpc">
+              <img src="./assets/img/noticiacard2.jpg" alt="" class="card image-top">
+              <div class="card-img-overlay">
+                <h4 class="cardtext">Campaña de castracion</h4>
+                <p class="cardtext">Conoce cuando es la proxima campaña</p>
+                <button type="button" class="btn btn-outline-light">Leer mas</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 py-3 py-md-0">
+            <div class="card" class="tpc">
+              <img src="./assets/img/noticiacard3.jpg" alt="" class="card image-top">
+              <div class="card-img-overlay">
+                <h4 class="cardtext">Colecta para el Refu</h4>
+                <p class="cardtext">Necesitamos de tu ayuda.</p>
+                <button type="button" class="btn btn-outline-light">Leer mas</button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card border-0 text-center">
-            <img src="./assets/img/refugioperros.jpeg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">CAMPAÑAS DE CASTRACION</h5>
-              <p class="card-text">Porque somos grandes concientizadores de la importancia de castracion, realizamos
-                campañas a cambio de una donacion para el refugio.</p>
-              <a href="./pages/Donaciones.html" class="btn btn-danger">Dona</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card border-0 text-center">
-            <img src="./assets/img/pexels-mali-maeder-101635.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">FORMA PARTE</h5>
-              <p class="card-text">¡Podes formar parte de nuestro equipo y conocer nuestras propuestas!</p>
-              <a href="./pages/Contacto.html" class="btn btn-danger">Contactanos</a>
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
-  </main>
-  <footer class="footer">
-    <div class="container-fluid  mt-100">
-      <div class="row">
+    </main>
+    <footer class="footer">
+      <div class="container-fluid  mt-100">
+        <div class="row">
+          <section>
+            <h4 class="h4 bg-light">Encontranos en nuestras redes sociales</h4>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.youtube.com/?app" target="_blank">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+          </section>
+        </div>
         <section>
-          <h4 class="h4 bg-warning">Encontranos en nuestras redes sociales</h4>
-          <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-            <i class="fa-brands fa-whatsapp"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="https://www.youtube.com/?app" target="_blank">
-            <i class="fa-brands fa-youtube"></i>
-          </a>
+          <h5> Estamos en:
+            <p>Av. Eva Peron 999</p>
+            <p>Barrio de Temperley</p>
+            <p>Buenos Aires. Argentina.</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.6295682036293!2d-58.37125832517085!3d-34.76492307289699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d3b3093689b%3A0x34344e5c2bfd1887!2sAv.%20Eva%20Per%C3%B3n%2C%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707001208368!5m2!1ses-419!2sar"
+              width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </h5>
         </section>
+        <section>
+          <h4>CONTACTO</h4>
+          <p>15-123-456</p>
+          <p>centrodemascotas@patitas.com.ar</p>
+        </section>
+        <p>Todos los derechos Reservados</p>
       </div>
-      <section>
-        <h5> Estamos en:
-          <p>Av. Eva Peron 999</p>
-          <p>Barrio de Temperley</p>
-          <p>Buenos Aires. Argentina.</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.6295682036293!2d-58.37125832517085!3d-34.76492307289699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d3b3093689b%3A0x34344e5c2bfd1887!2sAv.%20Eva%20Per%C3%B3n%2C%20Temperley%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707001208368!5m2!1ses-419!2sar"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </h5>
-      </section>
-      <section>
-        <h4>CONTACTO</h4>
-        <p>15-123-456</p>
-        <p>centrodemascotas@patitas.com.ar</p>
-      </section>
-      <p>Todos los derechos Reservados</p>
-    </div>
-  </footer>
-  <script src="./js/bootstrap.bundle.min.js"></script>
-</body>
+    </footer>
+    <script src="./js/bootstrap.bundle.min.js"></script>
+  </body>
 
-</html>
+  </html>
