--- a/pages/Adopciones.html
+++ b/pages/Adopciones.html
@@ -47,110 +47,85 @@
           </nav>
     </header>
     <main>
-        <h1 class="titulo text-center bg-warning m-5"> ADOPCIONES</h1>
-        <p class="parrafo bg-white text-center"> Hay muchos animales esperando una familia que los quiera.
-            Las adopciones son con compromiso de castracion y seguimiento.
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="card mb-3 border-danger" style="max-width: 300px;">
-                        <div class="row g-0">
-                          <div class="col-md-15">
-                            <img src="../assets/img/perro.png.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body ">
-                              <h5 class="card-title text-center bg-warning">PEDRO</h5>
-                              <p class="card-text">MACHO, 3 años, castrado. Le gusta mucho correr y jugar, se lleva bien con perros y gatos. Amante de la manzana.</p>
-                              <p class="card-text"><small class="text-muted">Dale una oportunidad.</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+      <div class="header-row row">
+        <div class="banner-image col-md-4">
+        <img src="../assets/img/carrosuel 3.jpg" class="img-fluid" alt="">
+        </div>
+      
+        <div class="banner-arrow col-md-5">
+          <div class="banner-arrow-text">
+            <h1 class="text-dark regular">ADOPCIONES</h1>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h3 class="text-center" style="padding-top: 30px;">CONOCELOS</h3>
+        <div class="row" style="margin-top: 50px;">
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card">
+                    <img src="../assets/img/Adopciones (1).jpg" alt="" class="card image-top" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-titel text-center">PEDRO</h5>
+                        <p class="text-center">Macho, 7 años, castrado. Fanatico de la manzana.</p>
+                        <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="card mb-3 border-danger" style="max-width: 300px;">
-                        <div class="row g-0">
-                          <div class="col-md-15">
-                            <img src="../assets/img/perroadopcion.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title text-center bg-warning ">HOPE</h5>
-                              <p class="card-text">HEMBRA, 7 años, castrada. Le gusta mucho jugar con pelotas. Se lleva bien con perros, no con gatos. Amante de la mandarina.</p>
-                              <p class="card-text"><small class="text-muted">Dale una oportunidad</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+            </div>
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card">
+                    <img src="../assets/img/Adopciones (2).jpg" alt="" class="card image-top" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-titel text-center">AMBAR</h5>
+                        <p class="text-center">Hembra, 10 años, castrada. Amante de la comida en general.</p>
+                        <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="card mb-3 border-danger" style="max-width: 300px;">
-                        <div class="row g-0">
-                          <div class="col-md-15">
-                            <img src="../assets/img/perroadopcion2.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title text-center bg-warning ">DOBBY</h5>
-                              <p class="card-text">MACHO, 1 año. Soy un cachorro que juega con todo. Se lleva bien con perros y gatos. Amante de los cartones y maderas.</p>
-                              <p class="card-text"><small class="text-muted">Dale una oportunidad</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+            </div>
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card">
+                    <img src="../assets/img/Adopciones (3).jpg" alt="" class="card image-top" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-titel text-center">MORA</h5>
+                        <p class="text-center">Hembra, 6 años, castrada. Fanatica de los huesos.</p>
+                        <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="card mb-3 border-danger" style="max-width: 300px;">
-                        <div class="row g-0">
-                          <div class="col-md-15">
-                            <img src="../assets/img/perro pequeño 3.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title text-center bg-warning ">MORA</h5>
-                              <p class="card-text">HEMBRA, 5 años. Me gusta dormir. Se lleva bien con gatos y algunos perros. Amante de la zanahoria.</p>
-                              <p class="card-text"><small class="text-muted">Dale una oportunidad</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3 border-danger" style="max-width: 300px;">
-                        <div class="row g-0">
-                          <div class="col-md-15">
-                            <img src="../assets/img/pexels-amal-santhosh-662417.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title text-center bg-warning">AMBAR</h5>
-                              <p class="card-text">HEMBRA, 10 años. Le gusta dormir y comer. Miedo a los gatos. Salta mucho para obtener su tan deseada manzana.</p>
-                              <p class="card-text"><small class="text-muted">Dale una oportunidad</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3 border-danger" style="max-width: 300 px;">
-                        <div class="row g-0">
-                          <div class="col-md-15">
-                            <img src="../assets/img/perro pequeño (1).jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title text center bg-warning">MOZ</h5>
-                              <p class="card-text">Macho, 4 años. Le gusta correr,, pasear y traer cosas que encuentre. Amante del queso.</p>
-                              <p class="card-text"><small class="text-muted">Dale una oportunidad</small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
-                
             </div>
         </div>
+    </div><div class="container">
+     <div class="row" style="margin-top: 50px;">
+          <div class="col-md-4 py-3 py-md-0">
+              <div class="card">
+                  <img src="../assets/img/Adopciones (4).jpg" alt="" class="card image-top" height="200px">
+                  <div class="card-body">
+                      <h5 class="card-titel text-center">DOBBY</h5>
+                      <p class="text-center">Macho, 1 año. Le encanta pasear y jugar.</p>
+                      <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4 py-3 py-md-0">
+              <div class="card">
+                  <img src="../assets/img/adopciones.jpg" alt="" class="card image-top" height="200px">
+                  <div class="card-body">
+                      <h5 class="card-titel text-center">HOPE</h5>
+                      <p class="text-center">Hembra, 10 años, castrada. Fanatica de jugar a la pelota.</p>
+                      <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4 py-3 py-md-0">
+              <div class="card">
+                  <img src="../assets/img/Adopciones (6).jpg" alt="" class="card image-top" height="200px">
+                  <div class="card-body">
+                      <h5 class="card-titel text-center">TOTO</h5>
+                      <p class="text-center">Macho, 4 años, castrado. Le gusta dormir mucho.</p>
+                      <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 
     </main>
     <footer class="footer">
