--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     </header>
     <main>
       <div class="container">
-        <h1 class="text-center" style="margin-top: 50px;">SOBRE NOSOTROS</h1>
-        <div class="row" style="margin-top: 50px;">
+        <h1 class="text-center">SOBRE NOSOTROS</h1>
+        <div class="row">
           <div class="col-md-6 py-3 py-md-0">
             <div class="card">
               <img src="./assets/img/sobre nosotros.jpg" alt="">
@@ -112,8 +112,8 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="row" style="margin-top: 100px;">
+      <div class="container2">
+        <div class="row">
           <div class="col-md-4 py-3 py-md-0">
             <div class="card" class="tpc">
               <img src="./assets/img/noticiacard.jpg" alt="" class="card image-top">
@@ -126,7 +126,7 @@
           </div>
           <div class="col-md-4 py-3 py-md-0">
             <div class="card" class="tpc">
-              <img src="./assets/img/noticiacard2.jpg" alt="" class="card image-top">
+              <img src="./assets/img/cardnoticia.jpg" alt="" class="card image-top">
               <div class="card-img-overlay">
                 <h4 class="cardtext">Campaña de castracion</h4>
                 <p class="cardtext">Conoce cuando es la proxima campaña</p>
@@ -151,15 +151,15 @@
       <div class="container-fluid  mt-100">
         <div class="row">
           <section>
-            <h4 class="h4 bg-light">Encontranos en nuestras redes sociales</h4>
+            <h4 class="h4">Encontranos en nuestras redes sociales</h4>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-              <i class="fa-brands fa-whatsapp"></i>
+              <i class="fa-brands fa-whatsapp" style="color: darkgreen;"></i>
             </a>
             <a href="https://www.instagram.com/" target="_blank">
-              <i class="fa-brands fa-instagram"></i>
+              <i class="fab fa-instagram" style="color: #ea62d1;"></i>
             </a>
             <a href="https://www.youtube.com/?app" target="_blank">
-              <i class="fa-brands fa-youtube"></i>
+              <i class="fab fa-youtube" style="color: #ff1a1a;"></i>
             </a>
           </section>
         </div>
