--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="banner-arrow col-md-5">
-                <div class="banner-arrow-text">
+                <div class="banner-arrow-text ">
                     <h1 class="text-dark regular">CONOCENOS</h1>
                 </div>
             </div>
@@ -104,14 +104,14 @@
             </div>
         </div>
         <section>
-            <h2 class="Opiniones bg-light text-center text-black-50 m-5"> Opiniones de quienes nos conocen ya:
+            <h2 class="Opiniones bg-light text-black-50 m-5"> Opiniones de quienes nos conocen ya:
             </h2>
             <div class='container mt-5 col-md-10 col-11 bg-light'>
                 <div class="header text-muted text-black-50"></div>
-                <div class="row" style="justify-content: center">
+                <div class="row">
                     <div class="card col-md-3 col-11">
-                        <div class="card-content bg-light border-danger">
-                            <div class="card-body p-0">
+                        <div class="card-content border-danger">
+                            <div class="cardbody p-0 ">
                                 <div class="profile mb-4 mt-3"> <img src="../assets/img/opiniones.jpg"
                                         class="card-img-top rounded-circle "> </div>
                                 <div class="card-subtitle">
@@ -158,8 +158,8 @@
             </div>
         </section>
         <section class="youtube text-center">
-            <p class="yt bg-warning text-center m-3 text-lg-center"> Encontranos en Youtube :</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQlKe0iSMpE?si=ylTqQoG0dcSFJ2Gr"
+            <h2 class="text-center m-3 text-lg-center"> Miranos en Youtube :</h2>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQlKe0iSMpE?si=ylTqQoG0dcSFJ2Gr"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -169,15 +169,15 @@
         <div class="container-fluid  mt-100">
           <div class="row">
             <section>
-              <h4 class="h4 bg-warning">Encontranos en nuestras redes sociales</h4>
+              <h4 class="h4">Encontranos en nuestras redes sociales</h4>
               <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-                <i class="fa-brands fa-whatsapp"></i>
+                <i class="fa-brands fa-whatsapp" style="color: darkgreen;"></i>
               </a>
               <a href="https://www.instagram.com/" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-instagram" style="color:  #ea62d1;"></i>
               </a>
               <a href="https://www.youtube.com/?app" target="_blank">
-                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-youtube" style="color: red;"></i>
               </a>
             </section>
           </div>
