--- a/pages/Adopciones.html
+++ b/pages/Adopciones.html
@@ -17,128 +17,136 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-gradient">
             <div class="container-fluid">
-              <img src="../assets/img/Logo.png.png" alt="" width="30" height="24">
-              <a class="navbar-brand" href="">Centro de Mascotas Patitas</a>
-      
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./Donaciones.html">Donaciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./Adopciones.html">Adopciones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./Contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
+                <img src="../assets/img/Logo.png.png" alt="" width="30" height="24">
+                <a class="navbar-brand" href="">Centro de Mascotas Patitas</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Donaciones.html">Donaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Adopciones.html">Adopciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <main>
-      <div class="header-row row">
-        <div class="banner-image col-md-4">
-        <img src="../assets/img/carrosuel 3.jpg" class="img-fluid" alt="">
-        </div>
-      
-        <div class="banner-arrow col-md-5">
-          <div class="banner-arrow-text">
-            <h1 class="text-dark regular">ADOPCIONES</h1>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <h3 class="text-center" style="padding-top: 30px;">CONOCELOS</h3>
-        <div class="row" style="margin-top: 50px;">
-            <div class="col-md-4 py-3 py-md-0">
-                <div class="card">
-                    <img src="../assets/img/Adopciones (1).jpg" alt="" class="card image-top" height="200px">
-                    <div class="card-body">
-                        <h5 class="card-titel text-center">PEDRO</h5>
-                        <p class="text-center">Macho, 7 años, castrado. Fanatico de la manzana.</p>
-                        <div id="btn2" class="text-center"><button>Adoptar</button></div>
-                    </div>
-                </div>
+        <div class="header-row row">
+            <div class="banner-image col-md-4">
+                <img src="../assets/img/carrosuel 3.jpg" class="img-fluid" alt="">
             </div>
-            <div class="col-md-4 py-3 py-md-0">
-                <div class="card">
-                    <img src="../assets/img/Adopciones (2).jpg" alt="" class="card image-top" height="200px">
-                    <div class="card-body">
-                        <h5 class="card-titel text-center">AMBAR</h5>
-                        <p class="text-center">Hembra, 10 años, castrada. Amante de la comida en general.</p>
-                        <div id="btn2" class="text-center"><button>Adoptar</button></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 py-3 py-md-0">
-                <div class="card">
-                    <img src="../assets/img/Adopciones (3).jpg" alt="" class="card image-top" height="200px">
-                    <div class="card-body">
-                        <h5 class="card-titel text-center">MORA</h5>
-                        <p class="text-center">Hembra, 6 años, castrada. Fanatica de los huesos.</p>
-                        <div id="btn2" class="text-center"><button>Adoptar</button></div>
-                    </div>
+
+            <div class="banner-arrow col-md-5">
+                <div class="banner-arrow-text">
+                    <h1 class="text-dark regular">ADOPCIONES</h1>
                 </div>
             </div>
         </div>
-    </div><div class="container">
-     <div class="row" style="margin-top: 50px;">
-          <div class="col-md-4 py-3 py-md-0">
-              <div class="card">
-                  <img src="../assets/img/Adopciones (4).jpg" alt="" class="card image-top" height="200px">
-                  <div class="card-body">
-                      <h5 class="card-titel text-center">DOBBY</h5>
-                      <p class="text-center">Macho, 1 año. Le encanta pasear y jugar.</p>
-                      <div id="btn2" class="text-center"><button>Adoptar</button></div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4 py-3 py-md-0">
-              <div class="card">
-                  <img src="../assets/img/adopciones.jpg" alt="" class="card image-top" height="200px">
-                  <div class="card-body">
-                      <h5 class="card-titel text-center">HOPE</h5>
-                      <p class="text-center">Hembra, 10 años, castrada. Fanatica de jugar a la pelota.</p>
-                      <div id="btn2" class="text-center"><button>Adoptar</button></div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4 py-3 py-md-0">
-              <div class="card">
-                  <img src="../assets/img/Adopciones (6).jpg" alt="" class="card image-top" height="200px">
-                  <div class="card-body">
-                      <h5 class="card-titel text-center">TOTO</h5>
-                      <p class="text-center">Macho, 4 años, castrado. Le gusta dormir mucho.</p>
-                      <div id="btn2" class="text-center"><button>Adoptar</button></div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+        <div class="container">
+            <h3 class="text-center" style="padding-top: 30px;">CONOCELOS</h3>
+            <div class="row" style="margin-top: 50px;">
+                <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                        <img src="../assets/img/Adopciones (1).jpg" alt="" class="card image-top" height="200px">
+                        <div class="card-body">
+                            <h5 class="card-titel text-center">PEDRO</h5>
+                            <p class="text-center">Macho, 7 años, castrado. Fanatico de la manzana.</p>
+                            <a href="./contacto.html">
+                                <div id="btn2" class="text-center"><button>Adoptar</button></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                        <img src="../assets/img/Adopciones (2).jpg" alt="" class="card image-top" height="200px">
+                        <div class="card-body">
+                            <h5 class="card-titel text-center">AMBAR</h5>
+                            <p class="text-center">Hembra, 10 años, castrada. Amante de la comida en general.</p>
+                            <a href="./contacto.html"><div id="btn2" class="text-center"><button>Adoptar</button></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                        <img src="../assets/img/Adopciones (3).jpg" alt="" class="card image-top" height="200px">
+                        <div class="card-body">
+                            <h5 class="card-titel text-center">MORA</h5>
+                            <p class="text-center">Hembra, 6 años, castrada. Fanatica de los huesos.</p>
+                            <a href="./contacto.html"><div id="btn2" class="text-center"><button>Adoptar</button></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row" style="margin-top: 50px;">
+                <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                        <img src="../assets/img/Adopciones (4).jpg" alt="" class="card image-top" height="200px">
+                        <div class="card-body">
+                            <h5 class="card-titel text-center">DOBBY</h5>
+                            <p class="text-center">Macho, 1 año. Le encanta pasear y jugar.</p>
+                            <a href="./contacto.html"><div id="btn2" class="text-center"><button>Adoptar</button></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                        <img src="../assets/img/adopciones.jpg" alt="" class="card image-top" height="200px">
+                        <div class="card-body">
+                            <h5 class="card-titel text-center">HOPE</h5>
+                            <p class="text-center">Hembra, 10 años, castrada. Fanatica de jugar a la pelota.</p>
+                            <a href="./contacto.html"><div id="btn2" class="text-center"><button>Adoptar</button></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                        <img src="../assets/img/Adopciones (6).jpg" alt="" class="card image-top" height="200px">
+                        <div class="card-body">
+                            <h5 class="card-titel text-center">TOTO</h5>
+                            <p class="text-center">Macho, 4 años, castrado. Le gusta dormir mucho.</p>
+                            <a href="./contacto.html"><div id="btn2" class="text-center"><button>Adoptar</button></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
     <footer class="footer">
         <section>
             <h4>Encontranos en nuestras redes sociales</h4>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-                <i class="fa-brands fa-whatsapp"></i>
+                <i class="fa-brands fa-whatsapp" style="color: darkgreen;"></i>
             </a>
             <a href="https://www.instagram.com/" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-instagram" style="color:#ea62d1; ;"></i>
             </a>
             <a href="https://www.youtube.com/?app" target="_blank">
-                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-youtube" style="color: red;"></i>
             </a>
         </section>
 
