--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -50,15 +50,15 @@
         <section>
             <div class="header-row row">
                 <div class="banner-image col-md-4">
-                <img src="../assets/img/carrosuel 3.jpg" class="img-fluid" alt="">
+                    <img src="../assets/img/carrosuel 3.jpg" class="img-fluid" alt="">
                 </div>
-              
+
                 <div class="banner-arrow col-md-5">
-                  <div class="banner-arrow-text">
-                    <h1 class="text-dark regular">CONTACTATE</h1>
-                  </div>
+                    <div class="banner-arrow-text">
+                        <h1 class="text-dark regular">CONTACTATE</h1>
+                    </div>
                 </div>
-              </div>
+            </div>
             <div class="container">
                 <div class="col">
                     <div class="row">
@@ -67,28 +67,17 @@
                     </div>
                 </div>
             </div>
-
             <div class="container">]
                 <div class=" text-center mt-5 ">
-
-                    <h1 class="formulario bg-warning">Formulario de contacto</h1>
-
-
+                    <h1 class="formulario bg-light">Formulario de contacto</h1>
                 </div>
-
-
                 <div class="row ">
                     <div class="col-lg-7 mx-auto">
                         <div class="card mt-2 mx-auto p-4 bg-light">
                             <div class="card-body bg-light">
-
                                 <div class="container">
                                     <form id="contact-form" role="form">
-
-
-
                                         <div class="controls">
-
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
@@ -96,7 +85,6 @@
                                                         <input id="form_name" type="text" name="name"
                                                             class="form-control" placeholder="Ingresa tu nombre"
                                                             required="required" data-error="Firstname is required.">
-
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
@@ -115,7 +103,6 @@
                                                         <input id="form_email" type="email" name="email"
                                                             class="form-control" placeholder="Ingresa tu Email"
                                                             required="required" data-error="Valid email is required.">
-
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
@@ -123,14 +110,12 @@
                                                         <label for="form_need">Motivo de consulta</label>
                                                         <select id="form_need" name="need" class="form-control"
                                                             required="required" data-error="Especifica tu consulta">
-                                                            <option value="" selected disabled>--Selecciona--
-                                                            </option>
+                                                            <option value="" selected disabled>--Selecciona--</option>
                                                             <option>Quiero visitar el refugio</option>
                                                             <option>Quiero donar</option>
                                                             <option>Quiero adoptar</option>
                                                             <option>Otro</option>
                                                         </select>
-
                                                     </div>
                                                 </div>
                                             </div>
@@ -141,55 +126,37 @@
                                                         <textarea id="form_message" name="message" class="form-control"
                                                             placeholder="Escribinos tu duda" rows="4"
                                                             required="required"
-                                                            data-error="Please, leave us a message."></textarea>
+                                                            data-error="Por favor deja tu mensaje"></textarea>
                                                     </div>
-
                                                 </div>
-
-
                                                 <div class="col-md-12">
-
-                                                    <input type="submit" class="btn btn-danger btn-send  pt-2 btn-block
+                                                    <input type="submit" class="btn btn-dark btn-send  pt-2 btn-block
                                     " value="Enviar mensaje">
-
                                                 </div>
-
                                             </div>
-
-
                                         </div>
                                     </form>
                                 </div>
                             </div>
-
-
                         </div>
-
-
                     </div>
-
-
                 </div>
             </div>
-
-
         </section>
-
     </main>
     <footer class="footer">
         <section>
             <h4>Encontranos en nuestras redes sociales</h4>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-                <i class="fa-brands fa-whatsapp"></i>
+                <i class="fa-brands fa-whatsapp" style="color: darkgreen;"></i>
             </a>
             <a href="https://www.instagram.com/" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-instagram" style="color:#ea62d1; ;"></i>
             </a>
             <a href="https://www.youtube.com/?app" target="_blank">
-                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-youtube" style="color: red;"></i>
             </a>
         </section>
-
         <section>
             <h5> Estamos en:
                 <p>Av. Eva Peron 999</p>
