--- a/pages/Donaciones.html
+++ b/pages/Donaciones.html
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="container">
-      <h2 class="text-center" style="margin-top: 50px;">¡Danos una pata!</h2>
+      <h2 class="text-center">¡Danos una pata!</h2>
       <div class="row" style="margin-top: 40px;">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
@@ -78,7 +78,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center">ALIMENTO BALANCEADO</h3>
               <p class="card-text text-center">Para cachorros, adultos y senior</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -88,7 +90,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center">ABRIGOS</h3>
               <p class="card-text text-center">Abrigos para el frio, todas las medidas.</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -98,7 +102,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center">COLCHONETAS, CAMAS</h3>
               <p class="card-text text-center">De cualquier medida y material.</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -107,8 +113,10 @@
             <img src="../assets/img/donacionescorrea.jpg" alt="" class="card image-top">
             <div class="card-body">
               <h3 class="card-titel text-center">COLLARES Y CORREAS</h3>
-              <p class="card-text text-center">De cauqluier medida y material.</p>
-              <div class="btn3"><button>Dona</button></div>
+              <p class="card-text text-center">De cualquier medida y material.</p>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -120,7 +128,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center">INSUMOS VETERINARIOS</h3>
               <p class="card-text text-center">Algodon, gasas, agua oxigenada, alcohol, etc.</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -130,7 +140,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center ">JUEGUETES</h3>
               <p class="card-text text-center"> Todos son mas que bienvenidos.</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -140,7 +152,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center">HIGIENE</h3>
               <p class="card-text text-center">Shampoo para pulgas y garrapatas</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -150,7 +164,9 @@
             <div class="card-body">
               <h3 class="card-titel text-center">AYUDA ECONOMICA</h3>
               <p class="card-text text-center">Podes donar lo que quieras y puedas.</p>
-              <div class="btn3"><button>Dona</button></div>
+              <a href="./contacto.html">
+                <div class="btn3"><button>Dona</button></div>
+              </a>
             </div>
           </div>
         </div>
@@ -162,13 +178,13 @@
     <section>
       <h4>Encontranos en nuestras redes sociales</h4>
       <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-whatsapp" style="color: darkgreen;"></i>
       </a>
       <a href="https://www.instagram.com/" target="_blank">
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram" style="color: #ea62d1;;"></i>
       </a>
       <a href="https://www.youtube.com/?app" target="_blank">
-        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-youtube" style="color: red;"></i>
       </a>
     </section>
 
